Update dependencies and enhance Home page layout with new components and styles; replace Navbar structure and add Google Fonts.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,9 @@
 .navbar-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-grow: 1;
-  margin-left: 10px;
+  margin: 20px 100px 0px;
 }
 
 .logo-container {
@@ -12,16 +13,16 @@
 }
 
 .logo-image {
-  padding-top: 3px;
-  height: 150px;
+  padding-top: 10px;
+  height: 100px;
   width: auto;
   cursor: pointer;
   filter: drop-shadow(10px -5px 10px rgba(0,0,0,0.6));
-  mask-image: linear-gradient(to right, transparent 13%, black 20%, black 70%, transparent 80%);
+  mask-image: linear-gradient(to right, transparent 4%, black 20%, black 70%, transparent 88%);
 }
 
 .logo-text {
   position: relative;
-  top: -50px;
+  top: -40px;
   left: -6px;
 } 
