--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,300;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
   font-family: 'Lato', sans-serif !important;
