--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,28 +36,13 @@ body {
     position: absolute;
     top: 0;
     bottom: 0;
-    width: 200px;
+    width: 100px;
     z-index: 2;
     pointer-events: none;
+    border-radius: 10px;
   }
 
-  &::before {
-    left: 0;
-    background: linear-gradient(to right, 
-      rgba(255, 255, 255, 1) 0%,
-      rgba(255, 255, 255, 0.8) 20%,
-      rgba(255, 255, 255, 0) 100%
-    );
-  }
-
-  &::after {
-    right: 0;
-    background: linear-gradient(to left, 
-      rgba(255, 255, 255, 1) 0%,
-      rgba(255, 255, 255, 0.8) 20%,
-      rgba(255, 255, 255, 0) 100%
-    );
-  }
+  
 }
 
 @keyframes scroll {
